some other documents added

--- a/single1.html
+++ b/single1.html
@@ -338,7 +338,7 @@ A UI if possible.
                                    
                                     <div class="c-padding">
                                        <h3>Article By <a href="#" target="_blank" data-toggle="tooltip" data-placement="top" title="Visit Alex Website">Alex Parker</a></h3>
-                                       <p>You can use about author box when someone guest post on your blog, Lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna ad minim veniam.</p>
+                                       <p>A passionate developer</p>
                                       </div>
                                     </div>
                                     <!-- Post Author Bio Box End -->
