--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                                     	<span>November 23, 2016 / by <a href="#" target="_blank">Muhammad Ahad Ul Alam</a></span>
                                     </div>  
                                     <p>Load Load Load Load Load Load Load Load Load LoadLoad Load Load Load Load Load Load Load Load Load Load Load Load Load Load  Load Load Load Load Load</p>
-                                    <a href="single.html" class="button button-style button-anim fa fa-long-arrow-right"><span>Read More</span></a>
+                                    <a href="single2.html" class="button button-style button-anim fa fa-long-arrow-right"><span>Read More</span></a>
                                 </div>
                                 <!-- Blog Post End -->
                                 
