--- a/supervised_learning/index.html
+++ b/supervised_learning/index.html
@@ -836,6 +836,9 @@
 </style>
 </head>
 <body class="light-theme">
+    <div>
+        <p> xkslldklsldsjfkdjfkdjfkfdkf fjdkhgjfdhgjfhg</p>
+    </div>
     <div id="left">
         <div id="left-controls">
             <button id="btnThumbnails" title="Thumbnails" class="btn"><i class="fa fa-picture-o fa-lg" aria-hidden="true"></i></button>
