--- a/supervised_learning/index.html
+++ b/supervised_learning/index.html
@@ -837,7 +837,8 @@
 </head>
 <body class="light-theme">
     <div>
-        <p> xkslldklsldsjfkdjfkdjfkfdkf fjdkhgjfdhgjfhg</p>
+         <button id="btnSearch1" title="Search" class="btn1"><i class="fa fa-search fa-lg" aria-hidden="true"></i></button>
+        
     </div>
     <div id="left">
         <div id="left-controls">
